Fixed the layout problem, I really don't like the errors in the string...

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,6 @@ header {
 
 #wrap {
     clear: both;
-    text-align: center;
     font-family: 'Quicksand', sans-serif;
     font-family: "Noto Sans JP";
     background-color: #ffffff;
@@ -161,6 +160,18 @@ footer small {
 
 }
 
+#index #wrap {
+    background-color: transparent;
+}
+
+#index {
+    background-color: transparent;
+}
+
+#about {
+    background-color: transparent;
+}
+
 #index {
     background-image: url(../images/index_background.png);
     background-repeat: no-repeat;
@@ -194,7 +205,7 @@ section {
     margin-bottom: 35px;
 }
 
-.icon::before{
+.icon:before{
     content: "";
     padding-right: 10px;
     border-left: 7px solid #9cb4a4;
@@ -211,11 +222,11 @@ section {
 }
 
 #about .profile-image {
-    float :right;
+    float: right;
 
 }
 
-.clearfix::after {
+.clearfix:after {
     content: "";
     display: block;
     clear: both;
